@@ -1,3 +1,6 @@
+2002-07-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* exult.cc: fixed --buildmap
+
 2002-07-04  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actors.cc,exult.cc,ucsched.cc:  Added 'rest_time', so Avatar
